fluxcd/core/base/cilium-policies/ingress-public.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ingress-controller
  namespace: ingress-public
spec:
  description: "Allow egress from nginx controller to kube-dns, k8s API, and public labeled pods"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: ingress-public
      app.kubernetes.io/name: ingress-nginx
  egress:
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
  - toEndpoints:
    - matchLabels:
        homelab/public: "true"
      matchExpressions:
      - key: io.kubernetes.pod.namespace
        operator: Exists
  - toEntities:
    - kube-apiserver
    toPorts:
    - ports:
      - port: "6443"
